* surveyMaker works * Added BeautifulSoup to prettify generated html * Lots of work on templates

--- a/templates/answer_select.html
+++ b/templates/answer_select.html
@@ -1,5 +1,5 @@
-<select name="{{ name }}">
-{%  for option in options %}
+<select id="q{{ id }}_select"  name="q{{ id }}">
+{%  for option in options -%}
     <option value="{{ option }}">{{ option }}</option>
-{%  endfor %}
+{%  endfor -%}
 </select>
