--- a/templates/answer_radio.html
+++ b/templates/answer_radio.html
@@ -1,3 +1,3 @@
-{% for option in options %}
-    <input id="{{ option.id }}" type="radio" name="{{ name }}" value="{{ option.value }}">{{ option.value }}</input>
-{% endfor %}
+{% for option in options -%}
+    <input id="q{{ id }}_{{ option.id }}" type="radio" name="q{{ id }}_radio" value="{{ option.value }}">{{ option.value }}</input>
+{% endfor -%}
