Drivers table looks good now. Added generic embedding of row index in table cells if needed. It complicates the .yaml file a little bit, but it's an advanced feature they you opt in to use.

--- a/static/css/additional.css
+++ b/static/css/additional.css
@@ -5,11 +5,7 @@
 }
 
 .questiontable {
-    margin-left: 30px;margin-bottom: 30px;text-align: center;
-}
-
-#drivers input {
-    width: 50px;
+    margin-left: 30px; margin-bottom: 30px; text-align: center;
 }
 
 .plain-list {
@@ -21,4 +17,11 @@
 .hidden
 {
     display: none
+}
+
+tr {
+    display: table-row;
+}
+td {
+    padding-left: 10px;
 }
