Added dynamic display of driver table based on selection of number of drivers

--- a/templates/answer_table.html
+++ b/templates/answer_table.html
@@ -1,7 +1,7 @@
 <table id="{{ id }}">
     <tbody>
         {% for row in rows %}
-        <tr id="{{ id }}{{ i }}">
+        <tr id="{{ id }}_{{ loop.index }}" class="{{ 'hidden' if hidden else '' }}">
             {% for cell in row %}
             <td>{{ cell.text }}</td><td>{{ cell.answer }}</td>
             {% endfor %}
