--- a/templates/survey2.html
+++ b/templates/survey2.html
@@ -54,7 +54,7 @@
 <script type="text/javascript" src="static/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript" src="static/js/common.js"></script>
 <script type="text/javascript" src="static/js/actions.js"></script>
-<script type="text/javascript" src="static/js/survey.js"></script>
+<script type="text/javascript" src="static/survey2.js"></script>
 <script type="text/javascript">
 //$.getScript("php/ajax/pgchk.php");
 //var totalpages;
