--- a/templates/answer_map.html
+++ b/templates/answer_map.html
@@ -1,3 +1,3 @@
-<button id="{{ id }}-place-marker-button" class="btn">Place Marker</button>
-<div id="{{ id }}-map-canvas"></div>
+<button id="q{{ id }}_place_marker_button" class="btn">Place Marker</button>
+<div id="q{{ id }}_map_canvas" class="map"></div>
 
